fix highlight js word wrap issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,3 +16,8 @@
   padding-top: 0 !important;
   border-top: none !important;
 }
+
+pre code {  
+    word-wrap: normal;
+    white-space: pre;
+}
